feat: seperate views

--- a/src/assets/locales/en-US.json
+++ b/src/assets/locales/en-US.json
@@ -3,6 +3,7 @@
     "title": "pathfinder",
     "play": "Play",
     "daily": "Daily",
-    "settings": "Settings"
+    "settings": "Settings",
+    "back": "Back"
   }
 }
