--- a/src/assets/locales/en-US.json
+++ b/src/assets/locales/en-US.json
@@ -4,6 +4,7 @@
     "play": "Play",
     "daily": "Daily",
     "settings": "Settings",
-    "back": "Back"
+    "back": "Back",
+    "transitions": "Menu Transitions"
   }
 }
