feat: hover anims

--- a/src/assets/locales/en-US.json
+++ b/src/assets/locales/en-US.json
@@ -5,6 +5,6 @@
     "daily": "Daily",
     "settings": "Settings",
     "back": "Back",
-    "transitions": "Menu Transitions"
+    "hover-animations": "Hover Animations"
   }
 }
