chore: remove hover anims

--- a/src/assets/locales/en-US.json
+++ b/src/assets/locales/en-US.json
@@ -5,7 +5,7 @@
     "daily": "Daily",
     "settings": "Settings",
     "back": "Back",
-    "hover-animations": "Hover Animations",
+    "transitions": "Menu Transitions",
     "difficulty-normal": "Normal",
     "difficulty-hard": "Hard",
     "difficulty-extreme": "Extreme"
