--- a/src/assets/locales/en-US.json
+++ b/src/assets/locales/en-US.json
@@ -4,8 +4,15 @@
     "play": "Play",
     "daily": "Daily",
     "settings": "Settings",
-    "hover-anims": "Hover Animations",
-    "transitions": "Menu Transitions",
     "back": "Back"
+  },
+  "settings": {
+    "hover-anims": "Hover Animations",
+    "transitions": "Menu Transitions"
+  },
+  "play": {
+    "difficulty-normal": "Normal",
+    "difficulty-hard": "Hard",
+    "difficulty-extreme": "Extreme"
   }
 }
