feat: theme selector

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -13,6 +13,9 @@
     "extreme": "Extreme"
   },
   "settings": {
-    "title": "settings"
+    "title": "settings",
+    "theme": "Theme",
+    "theme-light": "Light",
+    "theme-dark": "Dark"
   }
 }
