feat: checkbox for disabling hover anims

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -16,6 +16,7 @@
     "title": "settings",
     "theme": "Theme",
     "theme-light": "Light",
-    "theme-dark": "Dark"
+    "theme-dark": "Dark",
+    "hover-animations": "Hover Animations"
   }
 }
