feat: improve select api

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -8,6 +8,7 @@
   },
   "difficulty": {
     "title": "schwierigkeit",
+    "choose": "Schwierigkeit auswählen",
     "normal": "Normal",
     "hard": "Schwer",
     "extreme": "Extrem"
