feat: add aria labelt to square input

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -11,7 +11,8 @@
     "choose": "Schwierigkeit auswählen",
     "normal": "Normal",
     "hard": "Schwer",
-    "extreme": "Extrem"
+    "extreme": "Extrem",
+    "custom": "Benutzerdefiniert"
   },
   "settings": {
     "title": "einstellungen",
