--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -22,5 +22,9 @@
     "theme-dark": "Dark",
     "hover-animations": "Hover Animations",
     "menu-transitions": "Menu Transitions"
+  },
+  "ui": {
+    "next": "Next",
+    "prev": "Previous"
   }
 }
