--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -22,5 +22,9 @@
     "theme-dark": "Sombre",
     "hover-animations": "§Hover Animations",
     "menu-transitions": "§Menu Transitions"
+  },
+  "ui": {
+    "next": "§Next",
+    "prev": "§Previous"
   }
 }
