feat: prepare hints

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -28,6 +28,8 @@
     "prev": "Previous"
   },
   "game": {
+    "exit": "Exit",
+    "hint": "Hint",
     "restart": "Restart",
     "undo": "Undo",
     "operations": {
