feat: advance objectives in dev mode

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -18,7 +18,8 @@
   },
   "dev-mode": {
     "title": "Developer Mode",
-    "print-objectives": "Print Objectives"
+    "print-objectives": "Print Objectives",
+    "advance-objectives": "Advance Objectives"
   },
   "settings": {
     "title": "settings",
