--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -97,6 +97,6 @@
   "about": {
     "made-by": "Erstellt von seiboldto",
     "source-code": "Quellcode auf GitHub",
-    "version": "© 2024 · {{version}} · {{date}}"
+    "version": "© 2024 · v{{version}} · {{date}}"
   }
 }
