--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -74,7 +74,7 @@
       "division": "Division"
     },
     "tutorial": {
-      "0-start-path": "Click on a number in the grid to start a path.",
+      "0-start-path": "Click and hold a number in the grid to start a path.",
       "1-extend-path": "Move to an adjacent number to add it to the path.",
       "2-find-objective": "Find a path that computes to {{value}}. There may be multiple solutions.",
       "3-release-path": "Release your mouse to advance to the next objective.",
