--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -85,7 +85,8 @@
   },
   "hints": {
     "title": "Get a Hint",
-    "warning": "This level will not count towards your statistics if solved with a hint."
+    "warning": "This level will not count towards your statistics if solved with a hint.",
+    "button": "Get a hint for the active objective"
   },
   "share": {
     "title": "Share Level",
